--- a/SLBr/SLBr/Resources/Default.css
+++ b/SLBr/SLBr/Resources/Default.css
@@ -1,5 +1,5 @@
 ﻿/*Copyright © 2022 SLT World. All rights reserved.
-Use of this source code is governed by a BSD-style license that can be found in the LICENSE file.*/
+Use of this source code is governed by a GNU license that can be found in the LICENSE file.*/
 
 * {
     text-decoration: none;
