--- a/SLBr/SLBr/Resources/style.css
+++ b/SLBr/SLBr/Resources/style.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, sans-serif;
-    background: url('bg.jpg');
+    background: url('sus.jpg');
 }
 
 /*#checkboxes {
