--- a/SLBr/SLBr/ResourceDictionary.xaml
+++ b/SLBr/SLBr/ResourceDictionary.xaml
@@ -2,7 +2,8 @@
 Use of this source code is governed by a GNU license that can be found in the LICENSE file.-->
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:SLBr">
+                    xmlns:local="clr-namespace:SLBr"
+                    x:Class="SLBr.StyleResourceDictionary">
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -280,7 +281,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
                 <ControlTemplate TargetType="TabItem">
                     <Border Name="Border" BorderThickness="1,1,1,0" BorderBrush="{DynamicResource BorderBrush}" CornerRadius="5,5,0,0" Margin="0,0">
                         <StackPanel Orientation="Horizontal">
-                            <Button x:Name="CloseTabButton" Style="{DynamicResource AddButton}" Tag="7" Width="20" Height="20" Margin="5,0,0,0">
+                            <Button x:Name="CloseTabButton" Click="ButtonAction" Style="{DynamicResource AddButton}" Tag="7" Width="20" Height="20" Margin="5,0,0,0">
                                 <!--Click="ButtonAction"-->
                                 <Path Data="M68.55,0 2.92,65.63 202.73,265.45 -0,468.18 65.63,533.81 268.37,331.08 469.64,532.36 535.27,466.72 334,265.45 532.36,67.09 466.72,1.46 268.37,199.82 Z" Fill="{DynamicResource FontBrush}" Height="5" Width="5" Stretch="Fill" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             </Button>
@@ -294,7 +295,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
                                     </Style>
                                 </ContentPresenter.Resources>
                             </ContentPresenter>
-                            <Button Margin="0,0,5,0" Height="20" Width="20" x:Name="PinButton" ToolTip="Pin" Style="{DynamicResource AddButton}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xE840;" Foreground="{DynamicResource FontBrush}" Tag="21" FontSize="10"/>
+                            <Button Margin="0,0,5,0" Height="20" Width="20" x:Name="PinButton" ToolTip="Pin" Click="ButtonAction" Style="{DynamicResource AddButton}" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="&#xE840;" Foreground="{DynamicResource FontBrush}" Tag="21" FontSize="10"/>
                         </StackPanel>
                     </Border>
                     <ControlTemplate.Triggers>
